# eval-llm

./: main.py  pyproject.toml
bfcl4/: pyproject.toml
bfcl4/MiniMax-M2.5/: result.txt  task.py
bfcl4/Qwen3.5-0.8B/: task.py
tau2/: MiniMax-M2.5.py  pyproject.toml
tau2/MiniMax-M2.5/: result.txt
tau2/Qwen3.5-0.8B/: task.py
